--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TETRIS</title>
+</head>
+<link rel="stylesheet" href="tetris-css.css">
+<body>
+    <div>
+        <h2 class="game-logo-sprite">TETRIS in JS</h2>
+    </div>
+    <script src="start-game.js"></script>
+</body>
+</html>
